# docker-circle

./: docker-compose-ci.yml  docker-compose.yml  tasks.py
.circleci/: config.yml
docker/django/: Dockerfile
src/: coverage.ini  pyproject.toml  pytest.ini
src/config/: manage.py
src/config/circular/: asgi.py  settings.py  urls.py  wsgi.py
src/tests/: test_foo.py
